# docker-fullstack-app

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
docker-compose-app/: Dockerfile  docker-compose.yml  package.json  server.js
docker-react-app/: docker-compose-dev.yml
dockerfile-folder/: Dockerfile
nodejs-docker-app/: Dockerfile  package.json  server.js
