[tool.poetry]
name = "docker-fullstack-app"
version = "0.1.0"
description = "docker fullstack app"
authors = ["Sungsoo <onair0817@gmail.com>"]
readme = "README.md"
packages = [{include = "docker_fullstack_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.21.0"
flake8 = "^6.0.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
